src/app/components/filter/filter.component.scss
fs-filter {
  display: block;
}

.fs-filter {
  margin-bottom: 20px;
  display: block;

  .results {
    min-height: 90px;
    position: relative;
    overflow-x: auto;
    overflow-y: hidden;
  }

  .status-bar {
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .filter-chips {
    display: block;
  }

  .status-actions {
    > * {
      margin-top: 5px;
    }
  }

  .filter-searchless-container {
    display: flex;

    .status-actions {
      flex-grow: 1;

      > *:first-child {
        margin-top: 0;
      }
    }

  }

  .filter-search-container {
    flex-direction: row;
    box-sizing: border-box;
    display: flex;
    flex: 1 1 0;
    position: relative;

    .search {
      top: 8px;
      position: absolute;
      margin-left: 1px;
      left: 0;

      mat-icon {
        transform: scale(.9);
      }
    }

    form {
      width: 100%;
      height: 100%;
    }

    .filter-input-field {
      flex-direction: row;
      box-sizing: border-box;
      display: flex;
      align-items: center;
      flex: 1;
      height: 35px;

      .mat-form-field {
        width: 100%;
        height: 100%;
        font-size: 103%;

        .mat-form-field-underline {
          bottom: auto;
        }
        .mat-form-field-infix {
          border-top: 0;
        }
        .mat-form-field-wrapper {
          padding-bottom: 0;
          height: 100%;
        }

        .mat-form-field-flex {
          align-items: center;
          height: 100%;
        }
      }

      .mat-form-field-prefix,
      .mat-form-field-suffix {
        align-self: center;
        display: flex;
        align-items: center;

        white-space: nowrap;

        mat-icon, a {
          display: flex;
          cursor: pointer;
          color: initial;

          &:hover {
            color: inherit;
          }
        }
      }

      .mat-form-field-infix {
        width: auto;
      }
    }
  }

  .infinite-records {
    color: #999;
    font-size: 13px;
    margin-left: 4px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;

    .order-toggle {
      cursor: pointer;
      padding-left: 4px;
    }
  }

  button.reload {
    margin-left: -40px;
    right: -9px;
  }
}

@media screen and (max-width: 600px) {
  .fs-filter .filter-actions .filters-button {
    font-size: 0;
    padding: 0;
    min-width: unset;
    width: 36px;
    height: 36px;
    border-radius: 50%;
    box-shadow: unset !important;
  }
}

@media screen and (min-width: 1200px) {
  body.fs-filter-open {
    margin-right: 350px;
  }

  .fs-filter-backdrop {
    display: none;
  }
}

body.fs-filter-open {
  &::-webkit-scrollbar {
    width: 0;
    background: transparent;
  }
}

